--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# iCEStudio build artifacts
+ice-build/
+*.bin
+*.asc
+*.json
+*.log
+*.blif
+*.pack
+
+# System files
+.DS_Store
+Thumbs.db
